# LifeSimulator

./: .gitignore  .travis.yml  CMakeLists.txt  Descriptif de l'application.docx  Makefile  README.md  Simulator.cpp  Simulator.h  main.cpp
model/: MapSprites.cpp  MapSprites.h
model/species/: Animal.cpp  Animal.h  Cannibal.cpp  Cannibal.h  Carnivore.cpp  Carnivore.h  Vegan.cpp  Vegan.h
resources/: mapLifeSimulator.txt
view/: Window.cpp  Window.h
